--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         <aside class="menu-lateral">
             <ul>
                 <li>
-                    <a href="#" target="_blank">
+                    <a href="https://github.com/JoseVictorBr" target="_blank">
                         <img src="./src/imagens/github.svg" alt="icone Github" class="icone">
                     </a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">
+                    <a href="https://www.linkedin.com/in/josé-victor-silvestre-de-souza-9a107a268/" target="_blank">
                         <img src="./src/imagens/linkedin-in.svg" alt="icone Likedin" class="icone">
                     </a>
                 </li>
